adicionei mais coisa

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <title>Site Pessoal</title>
 </head>
 <header>
-  <a class = "icon"> Maria Luiza </a>
+  <a class = "logo"> Maria Luiza </a>
   <a> Colegas </a>
   <a> GitHub </a>
   <a> Inicial </a>
@@ -38,10 +38,22 @@
       </button>
     </div >
       <img id ='github-profile' class = "icon">
-      <a style="text-decoration: none;" href ="https://github.com/MariaRuasCode"><h1 class ="titulo">/MariaLuizaCode</h1></a>
-    <div>
+      <a style="text-decoration: none;" href ="https://github.com/MariaRuasCode"><h1 id ="titulo"></h1></a>
+
+    
+    <div class = "descricao">
+      <h1 id = "nome"></h1>
+      <p id = "bio"></p>
+      <h1>Redes Sociais</h1>
+      <div class = "icons">
+        <a href="https://www.linkedin.com/in/maria-luiza-ruas/"><img src="./assets/imgs/linkedin.png"></a>
+        <a href="https://github.com/MariaRuasCode"><img src="./assets/imgs/github-sign.png"></a>
+        <a href="https://twitter.com/elonmusk"><img style="background-color: white;" src="./assets/imgs/twitter.png"></a>
+      </div>
+
 
     </div>
+
   </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
